commit fix of spacing bug with the padding of the map creating a space for users to scroll horizontally to

--- a/src/Layout/Contact/Contact.module.css
+++ b/src/Layout/Contact/Contact.module.css
@@ -12,7 +12,7 @@
   justify-content: center;
   align-items: center;
   gap: 1rem;
-  padding: 2rem 5rem;
+  padding: 2rem 0rem;
   margin: 3rem 0;
 }
 
@@ -74,7 +74,7 @@
     justify-content: center;
     align-items: center;
     gap: 3rem;
-    padding: 0rem 5rem;
+    padding: 0rem;
     margin: 1rem 0;
   }
 
@@ -121,7 +121,7 @@
     justify-content: center;
     align-items: center;
     gap: 3rem;
-    padding: 0rem 5rem;
+    padding: 0rem;
     margin: 1rem 0;
   }
 
@@ -168,7 +168,7 @@
     justify-content: center;
     align-items: center;
     gap: 3rem;
-    padding: 0rem 5rem;
+    padding: 0rem;
     margin: 1rem 0;
   }
 
